--- a/src/styles/industry-plan.scss
+++ b/src/styles/industry-plan.scss
@@ -15,6 +15,37 @@
         display: flex;
         gap: 64px;
         height: 48px;
+        position: relative;
+
+        &:empty::before { content: 'Create or load an industry plan using the menu in the top-left corner'; }
+
+        .remove-plan {
+            bottom: 0;
+            cursor: pointer;
+            display: flex;
+            padding: 0 12px;
+            position: absolute;
+            right: 100%;
+            top: 0;
+
+            &::before {
+                align-items: center;
+                color: var(--color-warning);
+                content: '✕';
+                display: flex;
+                font-size: 150%;
+                height: 100%;
+                justify-content: center;
+                width: 40px;
+            }
+
+            &:hover::before {
+                background-color: var(--color-warning);
+                color: white;
+            }
+        }
+
+        &:not(:hover) .remove-plan { display: none; }
 
         .title-wrapper {
             // These elements must have identical styling, for the width measurement @ "IndustryPlan.onInputTitle"
@@ -37,6 +68,7 @@
                 color: var(--color-text-normal);
                 padding: 0;
 
+                &:hover, &:focus { background-color: black; }
                 &:hover { border-color: rgba(255, 255, 255, 0.2); }
             }
         }
@@ -118,7 +150,6 @@
                     }
 
                     .remove-product {
-                        align-items: center;
                         background-color: var(--color-available-products-bg);
                         bottom: 0;
                         cursor: pointer;
@@ -244,7 +275,6 @@
                             }
 
                             .remove-processor {
-                                align-items: center;
                                 background-color: var(--color-processor-header-bg);
                                 bottom: 0;
                                 cursor: pointer;
@@ -385,7 +415,6 @@
                                 }
 
                                 .remove-process {
-                                    align-items: center;
                                     background-color: var(--color-processor-processes-bg);
                                     bottom: 0;
                                     cursor: pointer;
