--- a/src/styles/overlay.scss
+++ b/src/styles/overlay.scss
@@ -62,6 +62,32 @@
                 line-height: 150%;
                 opacity: 0.5;
             }
+
+            .overlay-filters {
+                display: flex;
+                flex-direction: column;
+                gap: 16px;
+
+                .filter-checkboxes {
+                    display: flex;
+                    margin: -8px -16px;
+
+                    label {
+                        display: flex;
+                        font-size: 90%;
+                        gap: 8px;
+                        padding: 8px 16px;
+
+                        &:hover { @include hover-lighten-bg; }
+                    }
+                }
+
+                .filter-search {
+                    width: 100%;
+
+                    input { width: 100%; }
+                }
+            }
         }
     }
 
@@ -79,6 +105,111 @@
         }
 
         &:hover { opacity: 1; }
+    }
+}
+
+.overlay-add-startup-products {
+    .overlay-lists {
+        display: flex;
+        gap: 32px;
+        justify-content: space-between;
+
+        .overlay-list {
+            .overlay-list-title {
+                display: inline-block;
+                margin-bottom: 16px;
+                position: relative;
+
+                &::before { // "::after" reserved for tooltip
+                    --offset: 6px;
+                    content: 'ⓘ';
+                    left: calc(100% + var(--offset));
+                    opacity: 0.5;
+                    position: absolute;
+                    top: calc(0px - var(--offset));
+                }
+            }
+
+            .products-list {
+                background-color: var(--color-available-products-bg);
+                height: 50vh;
+
+                &:not(:empty) {
+                    overflow-y: scroll; // NOT "auto", to avoid overflow for product with longest name
+                }
+
+                .product {
+                    align-items: center;
+                    color: var(--color-text-normal);
+                    cursor: pointer;
+                    display: flex;
+                    font-size: 90%;
+                    gap: 8px;
+                    padding: 2px 16px 2px 2px;
+
+                    .product-icon { --product-icon-size: 24px; }
+
+                    .product-name { @include single-line-with-ellipsis; }
+
+                    &:hover {
+                        @include hover-lighten-bg;
+                        color: white;
+                    }
+                }
+            }
+
+            &.selected-products {
+                text-align: right;
+
+                .products-list {
+                    &:empty {
+                        background-color: unset;
+
+                        &::before {
+                            content: 'No product selected';
+                            opacity: 0.5;
+                        }
+                    }
+
+                    .product {
+                        position: relative;
+
+                        &::before {
+                            align-items: center;
+                            background-color: var(--color-warning);
+                            bottom: 0;
+                            color: white;
+                            content: '✕';
+                            display: flex;
+                            left: 0;
+                            padding: 0 8px;
+                            position: absolute;
+                            top: 0;
+                        }
+
+                        &:not(:hover)::before { display: none; }
+                    }
+                }
+
+                .add-products-button {
+                    margin-top: 16px;
+
+                    @include overlay-cta-button;
+                }
+            }
+        }
+
+        .separator {
+            align-items: center;
+            display: flex;
+
+            &::after {
+                content: '⮕';
+                opacity: 0.5;
+            }
+        }
+
+        &:hover .separator::after { opacity: 1; }
     }
 }
 
@@ -155,32 +286,6 @@
 }
 
 .overlay-add-process {
-    .overlay-filters {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-
-        .filter-checkboxes {
-            display: flex;
-            margin: -8px -16px;
-
-            label {
-                display: flex;
-                font-size: 90%;
-                gap: 8px;
-                padding: 8px 16px;
-
-                &:hover { @include hover-lighten-bg; }
-            }
-        }
-
-        .filter-search {
-            width: 100%;
-
-            input { width: 100%; }
-        }
-    }
-
     .overlay-lists {
         display: flex;
         gap: 64px;
@@ -343,42 +448,31 @@
     }
 }
 
-.overlay-add-startup-products {
-    .overlay-filters {
-        .filter-search {
-            width: 100%;
-
-            input { width: 100%; }
+.overlay-add-output-product {
+    .overlay-header {
+        .industry-tier {
+            @include hover-lighten-bg;
+            color: var(--color-text-normal);
+            line-height: 32px;
+            padding: 0 16px;
         }
     }
 
     .overlay-lists {
-        display: flex;
-        gap: 32px;
-        justify-content: space-between;
-
         .overlay-list {
-            .overlay-list-title {
-                display: inline-block;
-                margin-bottom: 16px;
-                position: relative;
-
-                &::before { // "::after" reserved for tooltip
-                    --offset: 6px;
-                    content: 'ⓘ';
-                    left: calc(100% + var(--offset));
-                    opacity: 0.5;
-                    position: absolute;
-                    top: calc(0px - var(--offset));
-                }
-            }
+            .overlay-list-title { margin-bottom: 16px; }
 
             .products-list {
                 background-color: var(--color-available-products-bg);
-                height: 50vh;
+                display: inline-block;
 
-                &:not(:empty) {
-                    overflow-y: scroll; // NOT "auto", to avoid overflow for product with longest name
+                &:empty {
+                    background-color: unset;
+
+                    &::before {
+                        content: 'No matching product';
+                        opacity: 0.5;
+                    }
                 }
 
                 .product {
@@ -390,12 +484,20 @@
                     gap: 8px;
                     padding: 2px 16px 2px 2px;
 
-                    .product-icon {
-                        --product-icon-size: 24px;
-                    }
+                    .product-icon { --product-icon-size: 24px; }
 
-                    .product-name {
-                        @include single-line-with-ellipsis;
+                    .product-name { @include single-line-with-ellipsis; }
+
+                    .process-name {
+                        flex-grow: 1;
+                        opacity: 0.5;
+                        text-align: right;
+
+                        &::before {
+                            content: 'via';
+                            margin-right: 8px;
+                            opacity: 0.5;
+                        }
                     }
 
                     &:hover {
@@ -404,69 +506,6 @@
                     }
                 }
             }
-
-            &.selected-products {
-                text-align: right;
-
-                .products-list {
-                    &:empty {
-                        background-color: unset;
-
-                        &::before {
-                            content: 'No product selected';
-                            opacity: 0.5;
-                        }
-                    }
-
-                    .product {
-                        position: relative;
-
-                        &::before {
-                            align-items: center;
-                            background-color: var(--color-warning);
-                            bottom: 0;
-                            color: white;
-                            content: '✕';
-                            display: flex;
-                            left: 0;
-                            padding: 0 8px;
-                            position: absolute;
-                            top: 0;
-                        }
-
-                        &:not(:hover)::before { display: none; }
-                    }
-                }
-
-                .add-products-button {
-                    margin-top: 16px;
-
-                    @include overlay-cta-button;
-                }
-            }
-        }
-
-        .separator {
-            align-items: center;
-            display: flex;
-
-            &::after {
-                content: '⮕';
-                opacity: 0.5;
-            }
-        }
-
-        &:hover .separator::after { opacity: 1; }
-    }
-}
-
-.overlay-add-output-product {
-    .overlay-header {
-        .industry-tier {
-            @include hover-lighten-bg;
-            color: var(--color-text-normal);
-            line-height: 32px;
-            padding: 0 16px;
         }
     }
 }
@@ -511,6 +550,7 @@
 
             &.list-item-header {
                 font-size: 120%;
+                opacity: 0.5;
             }
 
             &:not(.list-item-header) {
