--- a/src/styles/overlay.scss
+++ b/src/styles/overlay.scss
@@ -108,6 +108,7 @@
     }
 }
 
+.overlay-generate-plan-for-products,
 .overlay-add-startup-products {
     .overlay-lists {
         display: flex;
@@ -210,6 +211,14 @@
         }
 
         &:hover .separator::after { opacity: 1; }
+    }
+}
+
+.overlay-generate-plan-for-products {
+    .overlay-lists {
+        .overlay-list {
+            &.eligible-products .overlay-list-title::before { content: unset; }
+        }
     }
 }
 
