--- a/src/styles/industry-plan.scss
+++ b/src/styles/industry-plan.scss
@@ -154,9 +154,7 @@
             }
         }
 
-        &:not(.has-secondary-outputs) #refining-penalty { display: none; }
-
-        .generate-plan-for-products {
+        .generate-plan-for-target-products {
             .generate-plan-button {
                 align-items: center;
                 background-color: var(--color-button-bg);
@@ -178,12 +176,18 @@
                 }
 
                 &::after {
-                    content: 'Generate Plan for Products';
+                    content: 'Generate Plan for Target Products';
                     padding-right: 16px;
                     white-space: nowrap;
                 }
             }
         }
+
+        // Show "Scientists in Crew" only if the industry plan contains processes with secondary outputs
+        &:not(.has-secondary-outputs) #refining-penalty { display: none; }
+
+        // Show "Generate Plan for Target Products" only if the industry plan does NOT contain any processors
+        &.has-processors .generate-plan-for-target-products { display: none; }
     }
 
     #industry-plan-main {
