--- a/src/styles/overlay.scss
+++ b/src/styles/overlay.scss
@@ -192,7 +192,7 @@
                     }
                 }
 
-                .add-products-button {
+                .cta-button {
                     margin-top: 16px;
 
                     @include overlay-cta-button;
