--- a/src/styles/main-menu.scss
+++ b/src/styles/main-menu.scss
@@ -45,6 +45,7 @@
 
         &:hover {
             color: white;
+            cursor: default;
 
             #burger-icon .icon-inner {
                 border-color: white;
